[gd_scene format=3 uid="uid://dpgamsx00ls7m"]

[ext_resource type="Script" uid="uid://lpsmjybijt2n" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://dat7hiofdrcn4" path="res://assets/face.png" id="2_lnu2h"]
[ext_resource type="Texture2D" uid="uid://dbvfpwmuffa4d" path="res://assets/butt.png" id="3_lbhrr"]
[ext_resource type="Texture2D" uid="uid://jn8jqrdc3hj" path="res://assets/fart.png" id="4_lbhrr"]
[ext_resource type="Texture2D" uid="uid://blfasr1ero26i" path="res://assets/background_explosion.png" id="6_0tnpc"]
[ext_resource type="Texture2D" uid="uid://bxvvsjony5uf8" path="res://assets/new_assets/mask/mask.png" id="6_dinhu"]
[ext_resource type="Texture2D" uid="uid://b8y4yylq0gro" path="res://assets/new_assets/fart/fart_regular.png" id="6_kvuet"]
[ext_resource type="Script" uid="uid://dhx2vskx3fu0j" path="res://scripts/mask.gd" id="7_u5sy4"]
[ext_resource type="Texture2D" uid="uid://vhm2lxd4k23r" path="res://assets/dead.png" id="8_gee14"]
[ext_resource type="Texture2D" uid="uid://we3f76dv8fvf" path="res://assets/new_assets/background/Desktop - 3.png" id="10_kvpfn"]
[ext_resource type="Texture2D" uid="uid://dkjllr1ac1i1a" path="res://assets/new_assets/background/Desktop - 5.png" id="10_vtaks"]
[ext_resource type="Texture2D" uid="uid://cfgrjxslggyww" path="res://assets/new_assets/background/Group 4.png" id="11_kvpfn"]
[ext_resource type="Texture2D" uid="uid://c01l0gjc2rymq" path="res://assets/new_assets/background/Press X To Avoid Fart.png" id="12_dinhu"]

[sub_resource type="Animation" id="Animation_0tnpc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_lnu2h")]
}

[sub_resource type="Animation" id="Animation_vtaks"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_gee14")]
}

[sub_resource type="Animation" id="Animation_kvpfn"]
resource_name = "live"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_lnu2h")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dinhu"]
_data = {
&"RESET": SubResource("Animation_0tnpc"),
&"die": SubResource("Animation_vtaks"),
&"live": SubResource("Animation_kvpfn")
}

[sub_resource type="SystemFont" id="SystemFont_0tnpc"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_trtic"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestartLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RestartLabel:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_ir15t"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestartLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ca42v"]
resource_name = "flash"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestartLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RestartLabel:theme_override_font_sizes/font_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [50, 60]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rysoc"]
_data = {
&"RESET": SubResource("Animation_trtic"),
&"disappear": SubResource("Animation_ir15t"),
&"flash": SubResource("Animation_ca42v")
}

[node name="Game" type="Node2D" unique_id=1918586694]
script = ExtResource("1_uwrxv")

[node name="Visuals" type="Node2D" parent="." unique_id=1242763456]

[node name="Face" type="Sprite2D" parent="Visuals" unique_id=603230960]
z_index = 2
position = Vector2(958, 553.0292)
scale = Vector2(0.23519874, 0.22715986)
texture = ExtResource("2_lnu2h")
flip_h = true

[node name="FaceAnimationPlayer" type="AnimationPlayer" parent="Visuals" unique_id=252142955]
libraries/ = SubResource("AnimationLibrary_dinhu")

[node name="Butt" type="Sprite2D" parent="Visuals" unique_id=1220192690]
z_index = 2
position = Vector2(99.24642, 906.85004)
rotation = 0.49916416
scale = Vector2(1.1850913, 1.07952)
texture = ExtResource("3_lbhrr")
flip_v = true

[node name="Fart_disabled" type="Sprite2D" parent="Visuals" unique_id=301606915]
visible = false
z_index = 1
position = Vector2(596, 342)
scale = Vector2(0.52351487, 0.5)
texture = ExtResource("4_lbhrr")

[node name="Fart" type="Sprite2D" parent="Visuals" unique_id=301639459]
visible = false
z_index = 1
position = Vector2(585, 412)
rotation = -1.3439035
scale = Vector2(0.30598593, 0.30598593)
texture = ExtResource("6_kvuet")

[node name="Mask" type="Sprite2D" parent="Visuals" unique_id=1697141931]
z_index = 2
position = Vector2(949.04706, 833.24884)
scale = Vector2(0.24711514, 0.2387894)
texture = ExtResource("6_dinhu")
flip_h = true
script = ExtResource("7_u5sy4")

[node name="ColorRect" type="ColorRect" parent="Visuals" unique_id=1455981526]
visible = false
z_index = -6
offset_right = 1277.0
offset_bottom = 716.0
color = Color(1, 0.7490196, 0.003921569, 1)

[node name="Desktop5" type="Sprite2D" parent="Visuals" unique_id=175800379]
z_index = -1
position = Vector2(643.5, 363.00003)
scale = Vector2(0.6682292, 0.66111106)
texture = ExtResource("10_vtaks")

[node name="Desktop3" type="Sprite2D" parent="Visuals" unique_id=206722694]
visible = false
z_index = -1
position = Vector2(643.44446, 362.5)
scale = Vector2(0.6712963, 0.6712963)
texture = ExtResource("10_kvpfn")

[node name="BackgroundExplosion2" type="Sprite2D" parent="Visuals" unique_id=637131173]
position = Vector2(295.0766, 610.5)
scale = Vector2(0.5400106, 0.5400106)
texture = ExtResource("6_0tnpc")

[node name="UI" type="Control" parent="." unique_id=1348790825]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="TimerVBoxContainer" type="VBoxContainer" parent="UI" unique_id=184698677]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Separator" type="Control" parent="UI/TimerVBoxContainer" unique_id=124533418]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="UI/TimerVBoxContainer" unique_id=1402295979]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.039215688, 1)
theme_override_fonts/font = SubResource("SystemFont_0tnpc")
theme_override_font_sizes/font_size = 50
text = "Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultVBoxContainer" type="VBoxContainer" parent="UI" unique_id=1573439310]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 140

[node name="Separator" type="Control" parent="UI/ResultVBoxContainer" unique_id=251872958]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="UI/ResultVBoxContainer" unique_id=1834122964]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_0tnpc")
theme_override_font_sizes/font_size = 25
text = "Will you be farted on?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartVBoxContainer" type="VBoxContainer" parent="UI" unique_id=8892445]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 320

[node name="Separator" type="Control" parent="UI/RestartVBoxContainer" unique_id=659279103]
layout_mode = 2

[node name="RestartLabel" type="Label" parent="UI/RestartVBoxContainer" unique_id=1959803900]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_0tnpc")
theme_override_font_sizes/font_size = 20
text = "Press Enter to Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressXToAvoidFart" type="Sprite2D" parent="UI/RestartVBoxContainer" unique_id=43109625]
z_index = 2
position = Vector2(681, 98.99997)
scale = Vector2(0.17963387, 0.17963387)
texture = ExtResource("12_dinhu")

[node name="RestartAnimationPlayer" type="AnimationPlayer" parent="UI/RestartVBoxContainer" unique_id=41207070]
libraries/ = SubResource("AnimationLibrary_rysoc")

[node name="InstructionsVBoxContainer" type="VBoxContainer" parent="UI" unique_id=578865057]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 520

[node name="Separator" type="Control" parent="UI/InstructionsVBoxContainer" unique_id=1709395619]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="UI/InstructionsVBoxContainer" unique_id=494868659]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_0tnpc")
theme_override_font_sizes/font_size = 25
text = "Press X to avoid the fart!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressVBoxContainer" type="VBoxContainer" parent="UI" unique_id=132015833]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 600

[node name="Separator" type="Control" parent="UI/PressVBoxContainer" unique_id=1626367510]
layout_mode = 2

[node name="PressLabel" type="Label" parent="UI/PressVBoxContainer" unique_id=827162941]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_0tnpc")
theme_override_font_sizes/font_size = 40
text = "X / Y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Group4" type="Sprite2D" parent="." unique_id=1837519071]
z_index = 1
position = Vector2(1212, 349)
scale = Vector2(0.13773966, 0.13773966)
texture = ExtResource("11_kvpfn")
